--- a/h5/index.html
+++ b/h5/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>H5页面</title>
   </head>
-    <script src="js/combined-f7488a61c9.js"></script>
+    <script src="js/combined-8219fd861f.js"></script>
     <link rel="stylesheet" href="css/combined-ecaa2dfbf5.css">
     <style media="screen">
       body{
@@ -103,8 +103,8 @@
              height:100 ,
              center:true,
              css:{opacity:0,textAlign:'center' ,color:'red',fontSize:'30px'},
-             animationIn:{opacity:1,top:180},
-             animationOut:{opacity:0,top:290},
+             animationIn:{opacity:1,top:130},
+             animationOut:{opacity:0,top:220},
              delay:100
            })
            .addComponent('description',{
@@ -121,7 +121,7 @@
                top:450
               },
               text:'2017年，IT教育网引领中国IT行业进入新时代；高质量的实战课程，实时互动学习，以领先优势打造行业品牌；迄今为止，IT已成为中国规模最大、互动性最高的学习平台',
-             animationIn:{opacity:1,top:270},
+             animationIn:{opacity:1,top:220},
              animationOut:{opacity:0,top:450},
              delay:700
 
@@ -154,11 +154,11 @@
                 ['算法',.27]
               ],
               css:{
-                top:100,
+                bottom:0,
                 opacity:0
               },
-              animationIn:{opacity:1,top:300},
-              animationOut:{opacity:0,top:100},
+              animationIn:{opacity:1,bottom:40},
+              animationOut:{opacity:0,bottom:0},
               center:true
             })
             .addComponent('text',{
@@ -167,7 +167,7 @@
               height:100 ,
               center:true,
               css:{opacity:0,textAlign:'center' ,color:'red',fontSize:'20px'},
-              animationIn:{opacity:1,top:180},
+              animationIn:{opacity:1,top:130},
               animationOut:{opacity:0,top:290},
               delay:100
             })
@@ -324,7 +324,7 @@
               top:100,
               opacity:0
             },
-            animationIn:{opacity:1,top:150},
+            animationIn:{opacity:1,top:130},
             animationOut:{opacity:0,top:100},
             center:true
           })
@@ -340,7 +340,7 @@
               top:100,
               opacity:0
             },
-            animationIn:{opacity:1,top:399},
+            animationIn:{opacity:1,top:349},
             animationOut:{opacity:0,top:100},
             center:true
           })
@@ -356,7 +356,7 @@
               top:100,
               opacity:0
             },
-            animationIn:{opacity:1,top:399},
+            animationIn:{opacity:1,top:349},
             animationOut:{opacity:0,top:100},
 
           })
@@ -372,7 +372,7 @@
               top:100,
               opacity:0
             },
-            animationIn:{opacity:1,top:399,right:0},
+            animationIn:{opacity:1,top:349,right:0},
             animationOut:{opacity:0,top:100},
 
           })
@@ -388,7 +388,7 @@
               top:100,
               opacity:0
             },
-            animationIn:{opacity:1,top:520,left:75},
+            animationIn:{opacity:1,top:470,left:75},
             animationOut:{opacity:0,top:100},
 
           })
@@ -404,7 +404,7 @@
               top:100,
               opacity:0
             },
-            animationIn:{opacity:1,top:520,right:75},
+            animationIn:{opacity:1,top:470,right:75},
             animationOut:{opacity:0,top:100},
 
           })
@@ -415,7 +415,8 @@
             css:{
               bottom:0,
               left:50,
-              opacity:0
+              opacity:0,
+              top:300
             },
             data:[
               ['初级',.5,'#00FF66'],
