--- a/h5/index.html
+++ b/h5/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>H5页面</title>
-    <link rel="stylesheet" href="css/combined-b4ec83ba2a.css">
+    <link rel="stylesheet" href="css/combined-68bf7c1043.css">
     <script src="js/combined-e48c80ac07.js"></script>
   </head>
 
@@ -20,7 +20,7 @@
         background-image: url('imgs/face_bg.png');
       }
       .h5_component_name_slogan{
-        -webkit-animation:rock 2s infinite ;
+           animation:rock 2s infinite ;
              background-image: url('imgs/face_slogan.png');
 
 
@@ -34,7 +34,7 @@
         font-size: 20px;
         color:#fff;
       }
-      @-webkit-keyframes rock {
+      @keyframes rock {
         0%{transform: rotate(0deg)}
         5%{transform: rotate(3deg)}
         10%{transform: rotate(-4deg)}
@@ -49,7 +49,7 @@
         animation: back 2s infinite 2s;
         top:100px;
       }
-      @-webkit-keyframes back{
+      @keyframes back{
           50%{top:50px;}
         }
         /*.progress{
